2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/tests/video_checksum.c: Use grub_util_fd_* rather than
	open/read/write.

2013-10-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/windows/emuconsole.c: New file.

2013-10-14  Andrey Borzenkov <arvidjaar@gmail.com>

	* conf/Makefile.extra-dist: Add osdep/*/init.c

2013-10-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.am: Use TARGET_OBJCOPY when doing objcopy for target.

2013-10-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-probe.c (probe): Separate different drives in hint-str
	by spaces and not newlines.
	* util/grub-mkconfig_lib.in: Handle multidevice filesystem.

2013-10-14  Andrey Borzenkov <arvidjaar@gmail.com>

	* grub-core/disk/efi/efidisk.c (grub_efidisk_get_device_name):
	Handle CD-ROMs.

2013-10-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Pass-through unknown E820 types. It required reorganisation of mmap
	module.

2013-10-14  Andrey Borzenkov <arvidjaar@gmail.com>

	* Makefile.util.def: Add osdep/init.c to grub-mount files.

2013-10-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Make grub_util_fd_seek match behaviour of other grub_util_fd_* and
	fseeko.

2013-10-14  qwertial  <qwertial>

	* grub-core/gdb_grub.in: Fix overflow and wrong field.

2013-10-14  Jon McCune <jonmccune@google.com>

	* docs/grub.texi: Document new signatures possibility.

2013-10-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Define GRUB_UTIL_FD_O_* and always use them with grub_util_fd_open.

2013-10-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/osdep/hostfile_windows.h (grub_util_utf8_to_tchar): Add
	missing prototype.
	(grub_util_tchar_to_utf8): Likewise.

2013-10-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def: Add osdep/init.c on emu.
	* grub-core/kern/emu/main.c: Add missing include.
	* grub-core/osdep/basic/init.c (grub_util_host_init) [!GRUB_UTIL]:
	Don't call grub_util_init_nls.